--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ section				{ display: flex;
 			 	  flex-direction: column;
 				  height: 100%; }
 header				{ display: flex;
-				  width: 70%;	
+				  width: 55%;	
 				  padding-top: 1em;
 				  margin-left: auto;
 				  margin-right: auto;
@@ -17,19 +17,27 @@ header nav			{ flex: 1;
 				  text-align: right; }
 header nav a			{ color: #aee; }
 header nav a:hover		{ color: #eff; }
-article				{ flex: 1; 
+#main				{ flex: 1; 
+				  padding-top: 30%;
 				  font-family: Georgia, serif;
-				  color: #cde; }
-article div			{ width: 50%;
-				  padding-top: 15%;
+				  width: 50%;
+				  color: #cde; 
 				  margin-left: auto;
 				  margin-right: auto; }
-article p			{ font-size: 16pt; 
+#contact			{ flex: 1;
+				  width: 50%;
+				  margin-left: auto;
+				  font-size: 14pt;
+				  margin-right: auto;
+				  color: #abc; }
+#contact a			{ color: #5cc; }
+#contact a:hover		{ color: #3dd; }
+#main p				{ font-size: 16pt; 
 				  line-height: 140%;
 				  color: #9cc;}
-article p a			{ color: #aaf; 
+#main p a			{ color: #aaf; 
 				  text-shadow: 1px 0 #455; }
-article p a:hover		{ color: #ccf; 
+#main p a:hover			{ color: #ccf; 
 				  text-shadow: 1px 0 #223; }
 h2				{ font-size: 28pt; 
 				  margin: 0;
@@ -48,12 +56,13 @@ nav				{ color: #abc; }
 footer				{ text-align: center;
 				  padding-bottom: 1em;
 				  font-size: 11pt;
+				  line-height: 130%;
 				  color: #678; }
 footer a			{ color: #89a; }
 footer a:hover			{ color: #cdf; }
 @media only screen and (max-width: 768px), only screen and (max-device-width: 768px) {
 header				{ width: 95%; }
-article div			{ width: 95%; }
+#main, #contact			{ width: 95%; }
 h1				{ font-size: 16pt; }
 h2				{ font-size: 18pt;
 			 	  text-align: center; }
