Update for mobile view.

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ header nav			{ flex: 1;
 				  text-align: right; }
 header nav a			{ color: #aee; }
 header nav a:hover		{ color: #eff; }
-#logo				{ width: 90px; 
+#logo img			{ width: 90px; 
 			 	  opacity: 0.7; }
 #main				{ flex: 1; 
 				  padding-top: 30%;
@@ -64,7 +64,9 @@ footer a			{ color: #89a; }
 footer a:hover			{ color: #cdf; }
 @media only screen and (max-width: 768px), only screen and (max-device-width: 768px) {
 header				{ width: 95%; }
+#main				{ padding-top: 5%; }
 #main, #contact			{ width: 95%; }
+#logo				{ text-align: center; }
 h1				{ font-size: 16pt; }
 h2				{ font-size: 18pt;
 			 	  text-align: center; }
