--- a/index.css
+++ b/index.css
@@ -16,13 +16,14 @@ header				{ display: flex;
 				  margin-left: auto;
 				  margin-right: auto;
 			  	  flex-direction: row;
+				  align-items: center;
+				  -webkit-align-items: center;
 			  	  -webkit-flex-direction: row;
 				  font-family: "Playfair Display", Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif; }
 header nav			{ flex: 1; 
 				  -webkit-flex: 1;
 				  font-size: 13pt;
 				  font-family: "Alegreya Sans", Gill Sans, Gill Sans MT, Calibri, sans-serif;
-				  align-self: flex-end;
 				  text-align: right; }
 header nav a			{ color: #ccc; }
 header nav a + a		{ border-left: thin solid #666; 
@@ -33,7 +34,7 @@ header nav a:hover		{ color: #fff; }
 			 	  opacity: 0.7; }
 #main				{ flex: 1; 
 			 	  -webkit-flex: 1;
-				  padding-top: 30%;
+				  padding-top: 20%;
 				  width: 50%;
 				  color: #fff; 
 				  margin-left: auto;
