Don't flex on small view.

--- a/index.css
+++ b/index.css
@@ -80,4 +80,5 @@ h2				{ font-size: 18pt;
 			 	  text-align: center; }
 article p			{ font-size: 12pt; }
 header nav			{ font-size: 12pt; }
+section				{ display: block; }
 }
