--- a/kwebapp.css
+++ b/kwebapp.css
@@ -3,8 +3,7 @@ html, body					{ margin: 0;
 						  color: #444;
 						  height: 100%; }
 body						{ font-family: 'Alegreya Sans', sans-serif;
-						  font-weight: 200;
-						  font-style: normal;
+						  font-weight: 400;
 						  font-size: 14pt; }
 a						{ text-decoration: none; 
 						  color: #0575BD; }
@@ -29,24 +28,22 @@ body > section > header nav a + a		{ border-left: thin solid #888;
 body > section > header img			{ height: 24pt; }
 article a					{ border-bottom: thin solid #0575BD; }
 article > header				{ width: 50%;
-						  font-size: larger;
-						  line-height: 130%; 
 						  margin: 0 auto; }
-article > section				{ padding: 0 25%; 
-						  line-height: 140%; }
+article > header .intro				{ font-size: larger; }
+article > section				{ padding: 0 25%; }
 h1 a						{ color: inherit; 
 						  text-shadow: 1px 1px 1px transparent; }
 h1 a:hover					{ text-shadow: 0px 1px 1px #aaa; }
 h1						{ font-size: 24pt;
-						  font-weight: 300;
+						  font-weight: 400;
 						  flex: 1;
 						  margin: 0;
 						  -webkit-flex: 1;
 						  margin: 0 8pt;  }
-h2						{ font-weight: 300;
+h2						{ font-weight: 400;
 						  text-align: left;
 						  width: auto;
-						  text-shadow: 1px 1px 1px #000; 
+						  text-shadow: 0px 0px 1px #000; 
 						  font-size: 64pt; }
 h3						{ font-weight: 500; 
 						  font-size: 16pt; }
@@ -55,7 +52,6 @@ footer						{ text-align: center;
 						  padding-top: 1em;
 						  padding-bottom: 1em;
 						  font-size: 11pt;
-						  line-height: 130%;
 						  color: #678; }
 footer a					{ color: #89a; }
 footer a:hover					{ color: #456; }
@@ -67,13 +63,14 @@ figcaption					{ font-size: 12pt;
 						  color: #ccc; }
 blockquote					{ margin-bottom: 0; }
 code						{ font-family: monospace;
-						  font-size: 11pt; }
+						  font-size: 12pt; }
+code, pre					{ overflow: hidden; }
 
 @media only screen and (max-width: 1000px), only screen and (max-device-width: 1000px) {
 body > section > header				{ width: 90%; }
 article > header				{ width: 90%; }
 article > section				{ padding: 0 5%; }
 figure img					{ width: 100%; }
-h2						{ font-size: 48pt; 
+h2						{ font-size: 36pt; 
 					  	  text-align: center; }
 }
