--- a/kwebapp.css
+++ b/kwebapp.css
@@ -15,8 +15,8 @@ body > section > header				{ width: 50%;
 						  margin-right: auto;
 						  display: flex;
 						  display: -webkit-flex;
-						  align-items: center;
-						  -webkit-align-items: center; }
+						  align-items: flex-end;
+						  -webkit-align-items: flex-end; }
 body > section > header nav a			{ color: #000; 
 						  font-size: 14pt; }
 body > section > header nav a span		{ border-bottom: thin transparent; }
@@ -25,7 +25,8 @@ body > section > header nav a:hover span	{ border-bottom: thin solid #0575BD; }
 body > section > header nav a + a		{ border-left: thin solid #888; 
 						  padding-left: 4pt; 
 						  margin-left: 4pt; }
-body > section > header img			{ height: 24pt; }
+body > section > header img			{ height: 22pt; 
+						  margin-bottom: 1pt; }
 article a					{ border-bottom: thin solid #0575BD; }
 article > header				{ width: 50%;
 						  margin: 0 auto; }
@@ -36,6 +37,7 @@ h1 a						{ color: inherit;
 h1 a:hover					{ text-shadow: 0px 1px 1px #aaa; }
 h1						{ font-size: 24pt;
 						  font-weight: 400;
+						  line-height: 22pt;
 						  flex: 1;
 						  margin: 0;
 						  -webkit-flex: 1;
@@ -73,4 +75,5 @@ article > section				{ padding: 0 5%; }
 figure img					{ width: 100%; }
 h2						{ font-size: 36pt; 
 					  	  text-align: center; }
+h1						{ margin: 0 4pt; }
 }
