More integration with other article.

--- a/kwebapp.css
+++ b/kwebapp.css
@@ -7,9 +7,17 @@ body						{ font-family: 'Alegreya Sans', sans-serif;
 						  font-size: 14pt; }
 a						{ text-decoration: none; 
 						  color: #0575BD; }
+body > section > nav a				{ color: rgba(5, 117, 189, 0.5); }
+body > section > nav a:hover			{ color: rgba(5, 117, 189, 0.9); }
+body > section > nav				{ width: 50%;
+						  font-size: 13pt;
+						  margin: 0 auto;
+						  padding-top: 1em; 
+						  color: rgba(0, 0, 0, 0.5);
+						  padding-bottom: 2em; }
 body > section > header				{ width: 50%;	
-						  padding-top: 1em;
-						  padding-bottom: 1em;
+						  padding-top: 1.5em;
+						  padding-bottom: 1.5em;
 						  color: #222;
 						  margin-left: auto;
 						  margin-right: auto;
@@ -76,4 +84,6 @@ figure img					{ width: 100%; }
 h2						{ font-size: 36pt; 
 					  	  text-align: center; }
 h1						{ margin: 0 4pt; }
+body > section > nav				{ width: 90%; }
+body > section > nav				{ text-align: center; }
 }
